--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -334,13 +334,11 @@ freeglut \& OpenGLUT & More community-driven development & 2004 & U.F.\\ \hline
 Amarok \& Clementine Player & Technical (Addition of functionality) & 2010 & H.F.\\ \hline
 ApacheCouchDB \& BigCouch & Technical (Addition of functionality) & 2010 & H.F.\\ \hline
 Pidgin \& Carrier & Technical (Addition of functionality) & 2008 & H.F.\\ \hline
-MPlayer \& y & Technical (Addition of functionality) & z & H.F.\\ \hline
-x \& y & Technical (Addition of functionality) & z & H.F.\\ \hline
-Ceph \& N/A & N/A & N/A & No.F.\\ \hline
-Python \& N/A & N/A & N/A & No.F.\\ \hline
-OpenStack Neutron \& N/A & N/A & N/A & No.F.\\ \hline
-GlusterFS \& N/A & N/A & N/A & No.F.\\ \hline
-x \& y & N/A & N/A & No.F.\\
+MPlayer \& MPlayerXP & Technical (Addition of functionality) & 2005 & H.F.\\ \hline
+Ceph  & Not forked & N/A & No.F.\\ \hline
+Python & Not forked & N/A & No.F.\\ \hline
+OpenStack Neutron & Not forked & N/A & No.F.\\ \hline
+GlusterFS & Not forked & N/A & No.F.\\ 
 \noalign{\smallskip}\hline
 \end{tabular}
 \end{table*}
