--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -320,7 +320,7 @@ Our results will only be valid if the patterns found in the \textit{undesirable 
 
 \begin{table*}[!ht]
 \centering
-\caption{Forked projects (U.F. and H.F.) for which collaboration data was collected}
+\caption{Projects in U.F. H.F., and No.F. categories  for our study}
 \label{forkedProjectsDataCollected}
 \begin{tabular}{p{0.55\columnwidth} p{0.7\columnwidth} p{0.1\columnwidth} p{0.1\columnwidth}}
 \hline\noalign{\smallskip}
@@ -650,9 +650,11 @@ More importantly, the initial study showed the limitations of a \textit{network-
 \section{Yet To Be Done}
 \label{YetToBeDone}
 
-We proposed to model the developers interactions statistically, to find the population processes that underlie the formation, changes, and dissolution of developer communities. We expect to see distinct changes of such processes for each forking category; i.e., 1) Undesirable forks because of personal conflicts among the developer team, 2) Undesirable forks because of the need for more community-driven development, when a few elite developers behave in a clannish manner and put a glass ceiling for the rest of the community, 3) Other non-undesirable (e.g., Healthy) forks, in which, a fraction of developers temporarily fork away to add new features, and plan to merge back to the main project. We will also look at stable projects that have not forked undesirably, as control group. 
+We proposed to model the developers interactions statistically, to find the population processes that underlie the formation, changes, and dissolution of developer communities. We expect to see distinct changes of such processes for each forking category.
 
-We expect to find patterns specific to each of the above categories, which then may be used to identify early warning signs of forking. The identification of such measures may inform those who are interested in the sustainability of their project community to stay informed and take action to amend undesirable dynamics. 
+Data collection for mailing list archives is completed. The issue tracking system, and source code interactions data is in the progress. Once all data is collected an cleaned, we will do the statistical modeling. Next, we will conduct the interview study, which will conclude the proposed research. 
+
+We expect to find patterns specific to each category, which then may be used to identify early warning signs of forking. The identification of such measures may inform those who are interested in the sustainability of their project community to stay informed and take action to amend undesirable dynamics. 
 
 \section{Timeline}
 \label{timeline}
@@ -673,8 +675,8 @@ Winter 2014 & Creating communication graphs & \\
 Spring 2014 & Temporal visualization and temporal SNA & \\
 Fall 2014 & Preliminary statistical analysis & \\
 Spring 2015 & Planning and preliminary examination & \\
-Summer 2015 & Statistical analysis & RQ 1-3\\
-Fall 2015 & Interviews designs (including pilots) & \\
+Summer 2015 & Data collection for issue tracking and source code & \\
+Fall 2015 &  Statistical analysis \& Interviews designs (including pilots) & RQ 1-3 \\
 Winter 2016 & Interviews & RQ 4 \\
 Spring 2016 & Thesis writing & \\
 June 2016 & Defense & \\
